# datagovindia

./: .gitignore  LICENSE  README.md  default.nix  pyproject.toml
datagovindia/: __init__.py  __main__.py  api.py  config.py  db.py  logger.py  metadata.py
